refactoring/update tests (#18)
